--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import com.hindsighttesting.behave.gradle.FeaturesTask
-
 buildscript {
     ext.spring_boot_version = '1.5.7.RELEASE'
     ext.gebVersion = '1.1.1'
@@ -24,13 +22,20 @@ repositories {
 
 sourceCompatibility = 1.8
 
-//task behavefeatures(type: com.hindsighttesting.behave.gradle.FeaturesTask) {
-//    projectKey = '10200'
-//    server = 'http://s-v1-260:8080'
-//    username = 'Gradle2'
-//    password = 'gradle'
-//    destinationDir = 'src/test/resources/features'
-//}
+task behavefeatures(type: com.hindsighttesting.behave.gradle.FeaturesTask) {
+    projectKey = '10300'
+    server = 'http://s-v1-260:8080'
+    username = 'Gradle2'
+    password = 'gradle'
+    destinationDir = 'src/test/resources/features'
+}
+
+task deleteOldFeatures(type: Delete) {
+    delete fileTree(dir: "src/test/resources/features")
+}
+
+test.dependsOn(behavefeatures)
+behavefeatures.dependsOn(deleteOldFeatures)
 
 springBoot {
     mainClass = 'de.lineas.bddemo.Application' // tell Spring Boot where the main class is. Otherwise not booting.
